--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/lib/ext/resources/css/ext-all.css" />
     <link rel="stylesheet" type="text/css" href="./static/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./static/css/data-view.css" />
+    <link rel="stylesheet" type="text/css" href="./static/css/desktop.css" />
   </head>
 
   <body>
@@ -11,10 +13,18 @@
     <script type="text/javascript" src="/lib/ext/ext-all.js"></script>
 
     <script type="text/javascript" src="./static/js/Ext.ux.desktop.StartMenu.js"></script>
-    <script type="text/javascript" src="./static/js/Ext.ux.desktop.StartMenu.Bookmarks.js"></script>
-    <script type="text/javascript" src="./static/js/Ext.ux.desktop.StartMenu.Applications.js"></script>
-    <script type="text/javascript" src="./static/js/Ext.ux.desktop.StartMenu.Applications.Application.js"></script>
+
+    <script type="text/javascript" src="./static/js/Ext.ux.desktop.View.js"></script>
+
     <script type="text/javascript" src="./static/js/Ext.ux.desktop.Desktop.js"></script>
+
+    <script type="text/javascript" src="./static/js/Ext.ux.desktop.Icon.js"></script>
+
+    <script type="text/javascript" src="./static/js/Ext.ux.desktop.Window.js"></script>
+
+    <script type="text/javascript" src="./static/js/Ext.ux.desktop.Applications.js"></script>
+    <script type="text/javascript" src="./static/js/Ext.ux.desktop.Applications.Bookmarks.js"></script>
+    <script type="text/javascript" src="./static/js/Ext.ux.desktop.Applications.RSSReader.js"></script>
 
     <script type="text/javascript" src="./static/js/script.js"></script>
   </body>
