--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/lib/ext/resources/css/ext-all.css" />
     <link rel="stylesheet" type="text/css" href="./static/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./static/js/modules/Ext.ux.YoutubePlayer/src/resources/css/ext-ux-youtubeplayer.css" />
+    <link rel="stylesheet" type="text/css" href="./static/js/modules/Ext.ux.YoutubePlayer/src/resources/css/ext-ux-youtubeplayer-control.css" />
     <link rel="stylesheet" type="text/css" href="./static/css/data-view.css" />
     <link rel="stylesheet" type="text/css" href="./static/css/desktop.css" />
   </head>
@@ -10,7 +12,12 @@
   <body>
     <div id="foo"></div>
     <script type="text/javascript" src="/lib/ext/adapter/ext/ext-base.js"></script>
-    <script type="text/javascript" src="/lib/ext/ext-all.js"></script>
+    <script type="text/javascript" src="/lib/ext/ext-all-debug.js"></script>
+
+    <script type="text/javascript" src="./static/js/modules/SearchField.js"></script>
+
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.YoutubePlayer/src/YoutubePlayer.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.YoutubePlayer/src/YoutubePlayerControl.js"></script>
 
     <script type="text/javascript" src="./static/js/Ext.ux.desktop.StartMenu.js"></script>
 
