--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
   <body>
     <div id="foo"></div>
+
+    <script type="text/javascript" src="http://www.google.com/jsapi?key=ABQIAAAAHOITiVvSWeOehA_yhs9LiRTb-vLQlFZmc2N8bgWI8YDPp5FEVBTBZMzxpxzJLcUbpV3pwzRxpINA-g"></script>
+    <script type="text/javascript">
+        google.load("feeds", "1");
+    </script>
+
     <script type="text/javascript" src="/lib/ext/adapter/ext/ext-base.js"></script>
     <script type="text/javascript" src="/lib/ext/ext-all-debug.js"></script>
 
