--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/lib/ext/resources/css/ext-all.css" />
     <link rel="stylesheet" type="text/css" href="./static/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./static/js/modules/Ext.ux.filebrowser/css/filebrowser.css" />
     <link rel="stylesheet" type="text/css" href="./static/js/modules/Ext.ux.YoutubePlayer/src/resources/css/ext-ux-youtubeplayer.css" />
     <link rel="stylesheet" type="text/css" href="./static/js/modules/Ext.ux.YoutubePlayer/src/resources/css/ext-ux-youtubeplayer-control.css" />
     <link rel="stylesheet" type="text/css" href="./static/css/data-view.css" />
@@ -17,28 +18,37 @@
         google.load("feeds", "1");
     </script>
 
+    <!-- EXTJS -->
     <script type="text/javascript" src="/lib/ext/adapter/ext/ext-base.js"></script>
     <script type="text/javascript" src="/lib/ext/ext-all-debug.js"></script>
 
+    <!-- MODULES -->
     <script type="text/javascript" src="./static/js/modules/SearchField.js"></script>
-
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.filebrowser/js/data-view-plugins.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.filebrowser/js/Ext.ux.form.BrowseButton.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.filebrowser/js/Ext.ux.FileUploader.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.filebrowser/js/Ext.ux.UploadPanel.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.filebrowser/js/Ext.ux.FileTreeMenu.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.filebrowser/js/Ext.ux.FileTreePanel.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.filebrowser/js/Ext.ux.GridBrowser.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.filebrowser/js/Ext.ux.dataViewBrowser.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.filebrowser/js/Ext.ux.FileBrowser.js"></script>
     <script type="text/javascript" src="./static/js/modules/Ext.ux.YoutubePlayer/src/YoutubePlayer.js"></script>
     <script type="text/javascript" src="./static/js/modules/Ext.ux.YoutubePlayer/src/YoutubePlayerControl.js"></script>
 
+    <!-- DESKTOP -->
     <script type="text/javascript" src="./static/js/Ext.ux.desktop.StartMenu.js"></script>
-
     <script type="text/javascript" src="./static/js/Ext.ux.desktop.View.js"></script>
-
     <script type="text/javascript" src="./static/js/Ext.ux.desktop.Desktop.js"></script>
-
     <script type="text/javascript" src="./static/js/Ext.ux.desktop.Icon.js"></script>
-
     <script type="text/javascript" src="./static/js/Ext.ux.desktop.Window.js"></script>
-
     <script type="text/javascript" src="./static/js/Ext.ux.desktop.Applications.js"></script>
-    <script type="text/javascript" src="./static/js/Ext.ux.desktop.Applications.Bookmarks.js"></script>
-    <script type="text/javascript" src="./static/js/Ext.ux.desktop.Applications.RSSReader.js"></script>
-    <script type="text/javascript" src="./static/js/Ext.ux.desktop.Applications.YoutubePlayer.js"></script>
+
+    <!-- APPLICATIONS -->
+    <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.Bookmarks.js"></script>
+    <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.RSSReader.js"></script>
+    <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.YoutubePlayer.js"></script>
+    <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.FileBrowser.js"></script>
 
     <script type="text/javascript" src="./static/js/script.js"></script>
   </body>
