add filebrowser application

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/lib/ext/resources/css/ext-all.css" />
     <link rel="stylesheet" type="text/css" href="./static/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./static/js/modules/Ext.ux.filebrowser/css/data-view.css" />
     <link rel="stylesheet" type="text/css" href="./static/js/modules/Ext.ux.filebrowser/css/filebrowser.css" />
     <link rel="stylesheet" type="text/css" href="./static/js/modules/Ext.ux.YoutubePlayer/src/resources/css/ext-ux-youtubeplayer.css" />
     <link rel="stylesheet" type="text/css" href="./static/js/modules/Ext.ux.YoutubePlayer/src/resources/css/ext-ux-youtubeplayer-control.css" />
@@ -45,10 +46,11 @@
     <script type="text/javascript" src="./static/js/Ext.ux.desktop.Applications.js"></script>
 
     <!-- APPLICATIONS -->
+    <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.FileBrowser.js"></script>
     <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.Bookmarks.js"></script>
     <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.RSSReader.js"></script>
     <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.YoutubePlayer.js"></script>
-    <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.FileBrowser.js"></script>
+
 
     <script type="text/javascript" src="./static/js/script.js"></script>
   </body>
