--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 
     <!-- MODULES -->
     <script type="text/javascript" src="./static/js/modules/SearchField.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.upload/js/Ext.ux.StatusBar.js"></script>
+
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.upload/js/Ext.ux.Dialog.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.upload/js/Ext.ux.upload.LogPanel.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.upload/js/Ext.ux.upload.SwfConnector.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.upload/js/Ext.ux.upload.Html5Connector.js"></script>
+    <script type="text/javascript" src="./static/js/modules/Ext.ux.upload/js/Ext.ux.upload.Uploader.js"></script>
 
     <script type="text/javascript" src="./static/js/modules/Ext.ux.filebrowser/js/data-view-plugins.js"></script>
     <script type="text/javascript" src="./static/js/modules/Ext.ux.filebrowser/js/Ext.ux.FileTreeMenu.js"></script>
@@ -50,6 +57,7 @@
     <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.RSSReader.js"></script>
     <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.YoutubePlayer.js"></script>
     <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.Contacts.js"></script>
+    <script type="text/javascript" src="./static/js/apps/Ext.ux.desktop.Applications.Documents.js"></script>
 
 
     <script type="text/javascript" src="./static/js/script.js"></script>
